// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render ExpensesSummary with 1 expenses 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`render ExpensesSummary with multiples expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $2,312.35
  </h1>
</div>
`;
